--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Stefan van der Merwe",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.5.6",
     "express": "^4.15.2",
     "socket.io": "^1.7.3"
   }
